[package]
name = "CodeJudgeAPITest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
ntex-cors = "1.0.0"
ntex-multipart = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
wait-timeout = "0.2.0"
